# enigma2-plugins-sh4

./: Makefile.am  Rules-cpp.mak  autogen.sh  configure.ac  configure.ac.orig  genmetaindex.py
3dsettings/CONTROL/: control
3dsettings/po/: ru.po
aihdcontroler/CONTROL/: control
alternativesoftcammanager/CONTROL/: control  postrm
alternativesoftcammanager/meta/: Makefile.am  plugin_alternativesoftcammanager.xml
alternativesoftcammanager/po/: Makefile.am  lv.po  ru.po
alternativesoftcammanager/src/: Makefile.am  Manager.py  Softcam.py  Startup.py  __init__.py  plugin.py
antiscrollbar/CONTROL/: control
ardmediathek/CONTROL/: control
audiosync/CONTROL/: control
automaticcleanup/CONTROL/: control
automatictimerlistcleanup/CONTROL/: control
automaticvolumeadjustment/CONTROL/: control
autoresolution/CONTROL/: control
autoresolution/src/: plugin.py
autotimer/CONTROL/: control  control.orig
autotimer/po/: AutoTimer.pot  cs.po  de.po
autotimer/src/: AutoTimer.py  AutoTimerComponent.py  AutoTimerConfiguration.py  AutoTimerEditor.py  AutoTimerImporter.py  AutoTimerList.py  AutoTimerResource.py  AutoTimerSettings.py  __init__.py  plugin.py
autovolume/CONTROL/: control
autovolume/src/: Makefile.am  plugin.py
babelzapper/CONTROL/: control
bitrateviewer/CONTROL/: control
bitrateviewer/meta/: plugin_bitrateviewer.xml
bonjour/CONTROL/: control
cdinfo/CONTROL/: control
curlytx/CONTROL/: control
dreamexplorer/CONTROL/: control
dreamirc/CONTROL/: control
dreammediathek/CONTROL/: control
dvdbackup/CONTROL/: control
dvdbackup/src/: plugin.py
dyndns/CONTROL/: control
easyinfo/CONTROL/: control
easymedia/CONTROL/: control
easymedia/src/: plugin.py
ecasa/CONTROL/: control
eibox/CONTROL/: control
elektro/CONTROL/: control
emailclient/CONTROL/: control
emission/CONTROL/: control
epgrefresh/CONTROL/: control  control.orig
epgrefresh/src/: EPGRefresh.py  EPGRefreshConfiguration.py  plugin.py
epgsearch/CONTROL/: control  control.orig
epgsearch/po/: Makefile.am  lv.po
epgsearch/src/: EPGSearch.py  Makefile.am
eurotictv/CONTROL/: control
eurotictv/po/: ru.po
filebrowser/CONTROL/: control
fritzcall/CONTROL/: control
fritzcall/src/: plugin.py
fstabeditor/CONTROL/: control
ftpbrowser/CONTROL/: control
googlemaps/CONTROL/: control
growlee/CONTROL/: control
hddmanager/CONTROL/: control
hddmanager/meta/: Makefile.am  plugin_hddmanager.xml
hddmanager/po/: Makefile.am  lv.po  ru.po
hddmanager/src/: HddMount.py  Makefile.am  Manager.py  __init__.py  plugin.py
httpproxy/CONTROL/: control
imdb/CONTROL/: control
infobartunerstate/CONTROL/: control
kiddytimer/CONTROL/: control
lastfm/CONTROL/: control
letterbox/CONTROL/: control
libgisclubskin/: Makefile.am
libgisclubskin/CONTROL/: control
libgisclubskin/meta/: Makefile.am  plugin_libgisclubskin.xml
libgisclubskin/src/: Makefile.am
libgisclubskin/src/Converter/: Bitrate2.py  CaidInfo2.py  CamdInfo3.py  EmuName.py  FrontendInfo.py  FrontendInfo2.py  Makefile.am  MemoryInfo.py  ServiceInfo2.py  ServiceInfoEX.py  WiFiInfo.py
libgisclubskin/src/bitratecalc/: Makefile.am  bitratecalc.cpp
logomanager/CONTROL/: control
mediadownloader/CONTROL/: control
menusort/CONTROL/: control
merlinepg/CONTROL/: control
merlinepgcenter/CONTROL/: control
merlinepgcenter/meta/: plugin_merlinepgcenter.xml
merlinepgcenter/src/: ConfigTabs.py  EpgCenterList.py  MerlinEPGCenter.py
merlinmusicplayer/CONTROL/: control
merlinmusicplayer/src/: plugin.py
meteoitalia/CONTROL/: control
mosaic/CONTROL/: control
moviecut/CONTROL/: control
movieepg/CONTROL/: control
movielistpreview/CONTROL/: control
movieretitle/CONTROL/: control
moviesearch/CONTROL/: control
movieselectionquickbutton/CONTROL/: control
movietagger/CONTROL/: control
mphelp/CONTROL/: control
multiquickbutton/CONTROL/: control
multiquickbutton/meta/: Makefile.am  plugin_multiquickbutton.xml
multiquickbutton/po/: Makefile.am  messages.pot  ru.po
multiquickbutton/src/: Makefile.am  MultiQuickButton.py  keymap.xml  plugin.py
multirc/CONTROL/: control
mytube/CONTROL/: control
mytube/po/: lv.po  ru.po
mytube/src/: MyTubeSearch.py  MyTubeService.py  ui.py
namezap/CONTROL/: control
ncidclient/CONTROL/: control
netcaster/CONTROL/: control
networkbrowser/CONTROL/: control  postrm
networkbrowser/po/: Makefile.am  lv.po  ru.po
networkbrowser/src/: AutoMount.py  NetworkBrowser.py
ofdb/CONTROL/: control
orfat/CONTROL/: control
orfteletext/CONTROL/: control
osdadjustment/CONTROL/: control
osdadjustment/meta/: Makefile.am  plugin_osdadjustment.xml
osdadjustment/po/: Makefile.am  ru.po
osdadjustment/src/: Makefile.am  __init__.py  plugin.py
partnerbox/CONTROL/: control
passwordchanger/CONTROL/: control
passwordchanger/src/: plugin.py
permanentclock/CONTROL/: control
permanentclock/po/: Makefile.am  PermanentClock.pot  de.po  es.po  it.po  messages.pot  nl.po  ru.po  sr.po  sv.po  tr.po
permanenttimeshift/CONTROL/: control
permanenttimeshift/po/: ru.po
permanenttimeshift/src/: plugin.py
pipservicerelation/CONTROL/: control
pipservicerelation/src/: maintainer.info
pipzap/CONTROL/: control
pipzap/src/: plugin.py
pluginhider/CONTROL/: control
pluginsort/CONTROL/: control
podcast/CONTROL/: control
podcast/src/: plugin.py
porncenter/CONTROL/: control
porncenter/src/: plugin.py
quickbutton/CONTROL/: control
quickbutton/po/: Makefile.am  ru.po
quickbutton/src/: Makefile.am
quickepg/CONTROL/: control  prerm
quickepg/meta/: Makefile.am  plugin_quickepg.xml
quickepg/po/: Makefile.am  QuickEPG.pot  de.po  en.po  lt.po  lv.po  ru.po  uk.po
quickepg/src/: plugin.py
quickepgimport/CONTROL/: control  postinst
quickepgimport/meta/: Makefile.am  plugin_quickepgimport.xml
quickepgimport/po/: QuickEPG.pot  de.po  en.po  lt.po  lv.po  ru.po  uk.po
quickepgimport/src/: Makefile.am  plugin.py
reconstructapsc/CONTROL/: control
remotetimer/CONTROL/: control
rsdownloader/CONTROL/: control
seekbar/CONTROL/: control
(+99 files in other folders)
