
installdir = $(libdir)/enigma2/python/Components/Converter

install_PYTHON = \
	AlwaysTrue.py \
	Bitrate2.py \
	CaidInfo2.py \
	CamdInfo3.py \
	ConverterRotator.py \
	CpuUsage.py \
	EmuName.py \
	EventName2.py \
	ExtraNumText.py \
	FrontendInfo2.py \
	FrontendInfo.py \
	MemoryInfo.py \
	NextEvent.py \
	ProgressDiskSpaceInfo.py \
	RefString.py \
	RouteInfo.py \
	ServiceInfo2.py \
	ServiceName2.py \
	ServiceOrbitalPosition2.py \
	WiFiInfo.py

